@@ -1,3 +1,4 @@
+* Add support for plugins
 * Add drag & drop support on attachment button
 
 Version 5.0.0 - 2018-10-01
